--- a/Statistical_Thinking.ipynb
+++ b/Statistical_Thinking.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,19 @@
       "7   Position (1 = Junior Employee, 2 = Manager, 3 ...  \n",
       "8                                     0 = no, 1 = yes  \n",
       "9   Field of work (1 = Engineering, 2 = Finance, 3...  \n",
-      "10  Years absent from work (e.g. due to illness / ...  \n"
+      "10  Years absent from work (e.g. due to illness / ...  \n",
+      "0                              Annual salary in dollars\n",
+      "1     Years of experience prior to working in this f...\n",
+      "2                            Years worked in this field\n",
+      "3                         Years worked at current rank \n",
+      "4     Market value (1 = salary at market value for p...\n",
+      "5                          Has degree (0 = no, 1 = yes)\n",
+      "6     Has other post-secondary qualification (0 = no...\n",
+      "7     Position (1 = Junior Employee, 2 = Manager, 3 ...\n",
+      "8                                       0 = no, 1 = yes\n",
+      "9     Field of work (1 = Engineering, 2 = Finance, 3...\n",
+      "10    Years absent from work (e.g. due to illness / ...\n",
+      "Name: Explanation, dtype: object\n"
      ]
     }
    ],
@@ -76,7 +88,8 @@
     "print(data.shape)\n",
     "print(data.head())\n",
     "print(descrip_of_vars.shape)\n",
-    "print(descrip_of_vars.head(11))"
+    "print(descrip_of_vars.head(11))\n",
+    "print(descrip_of_vars['Explanation'].head(11))"
    ]
   },
   {
@@ -88,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,6 +128,183 @@
       "dtypes: float64(2), int64(9)\n",
       "memory usage: 44.2 KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "      <th>exprior</th>\n",
+       "      <th>yearsworked</th>\n",
+       "      <th>yearsrank</th>\n",
+       "      <th>market</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>otherqual</th>\n",
+       "      <th>position</th>\n",
+       "      <th>male</th>\n",
+       "      <th>Field</th>\n",
+       "      <th>yearsabs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>513.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "      <td>514.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>50863.220098</td>\n",
+       "      <td>2.926070</td>\n",
+       "      <td>12.852140</td>\n",
+       "      <td>7.052529</td>\n",
+       "      <td>0.948521</td>\n",
+       "      <td>0.964981</td>\n",
+       "      <td>0.044747</td>\n",
+       "      <td>2.132296</td>\n",
+       "      <td>0.750973</td>\n",
+       "      <td>2.529183</td>\n",
+       "      <td>6.982490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>12685.132358</td>\n",
+       "      <td>4.791397</td>\n",
+       "      <td>9.444695</td>\n",
+       "      <td>6.414771</td>\n",
+       "      <td>0.149380</td>\n",
+       "      <td>0.184008</td>\n",
+       "      <td>0.206950</td>\n",
+       "      <td>0.820075</td>\n",
+       "      <td>0.432871</td>\n",
+       "      <td>1.127420</td>\n",
+       "      <td>16.873156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>29000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.710000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>40000.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.840000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>50096.000000</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.920000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>60345.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>1.020000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>96156.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>41.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>1.330000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>118.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             salary     exprior  yearsworked   yearsrank      market  \\\n",
+       "count    513.000000  514.000000   514.000000  514.000000  514.000000   \n",
+       "mean   50863.220098    2.926070    12.852140    7.052529    0.948521   \n",
+       "std    12685.132358    4.791397     9.444695    6.414771    0.149380   \n",
+       "min    29000.000000    0.000000     0.000000    0.000000    0.710000   \n",
+       "25%    40000.000000    0.000000     4.000000    2.000000    0.840000   \n",
+       "50%    50096.000000    0.500000    12.000000    5.000000    0.920000   \n",
+       "75%    60345.000000    4.000000    22.000000   12.000000    1.020000   \n",
+       "max    96156.000000   25.000000    41.000000   28.000000    1.330000   \n",
+       "\n",
+       "           degree   otherqual    position        male       Field    yearsabs  \n",
+       "count  514.000000  514.000000  514.000000  514.000000  514.000000  514.000000  \n",
+       "mean     0.964981    0.044747    2.132296    0.750973    2.529183    6.982490  \n",
+       "std      0.184008    0.206950    0.820075    0.432871    1.127420   16.873156  \n",
+       "min      0.000000    0.000000    1.000000    0.000000    1.000000    0.000000  \n",
+       "25%      1.000000    0.000000    1.000000    1.000000    2.000000    0.000000  \n",
+       "50%      1.000000    0.000000    2.000000    1.000000    3.000000    1.000000  \n",
+       "75%      1.000000    0.000000    3.000000    1.000000    4.000000    2.000000  \n",
+       "max      1.000000    1.000000    3.000000    1.000000    4.000000  118.000000  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -122,19 +312,21 @@
     "print(data.isnull().values.any())\n",
     "print(data.isna().values.any())\n",
     "\n",
-    "data.info() # we \n",
+    "data.info()\n",
+    "data.describe()\n",
+    "# we \n",
     "\n",
     "#cleaning data\n",
     "\n",
-    "1-\n",
-    "2-\n",
-    "3-\n",
-    "4-\n",
-    "5-\n",
-    "6-\n",
-    "7-\n",
-    "8-\n",
-    "9-"
+    "#1-\n",
+    "#2-\n",
+    "#3-\n",
+    "#4-\n",
+    "#5-\n",
+    "#6-\n",
+    "#7-\n",
+    "#8-\n",
+    "#9-"
    ]
   },
   {
@@ -146,16 +338,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29000.0 is the minimum and 96156.0 is the maximum\n"
+     ]
+    }
+   ],
+   "source": [
+    "minimum = data['salary'].min()\n",
+    "maximum = data['salary'].max()\n",
+    "\n",
+    "print(f\"{minimum} is the minimum and {maximum} is the maximum\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3.What is the mean salary for the sample? Include the standard error of the mean."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50863.22009783625 is the mean\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = data['salary'].mean()\n",
+    "print(f\"{mean} is the mean\")"
    ]
   },
   {
@@ -166,10 +389,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.444695144169803 is the standard deviation\n"
+     ]
+    }
+   ],
+   "source": [
+    "standard_dev = data['yearsworked'].std()\n",
+    "print(f\"{standard_dev} is the standard deviation\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 5.What is the median salary for the sample?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50096.0 is the median\n"
+     ]
+    }
+   ],
+   "source": [
+    "median = data['salary'].median()\n",
+    "print(f\"{median} is the median\")"
    ]
   },
   {
@@ -180,6 +439,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DataFrame' object has no attribute 'quartiles'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-c376afe6bb29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mQ1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquartiles\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   4374\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4375\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4376\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4377\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4378\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'quartiles'"
+     ]
+    }
+   ],
+   "source": [
+    "Q1 = data.quartiles[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,10 +468,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "386 are males\n"
+     ]
+    }
+   ],
+   "source": [
+    "males = data['male'] == 1\n",
+    "data[males].count()\n",
+    "print(str(len(data[males]))+' are males')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 8.How many women are executives compared to men? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1    192\n",
+       "0     19\n",
+       "Name: male, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "executives =  data[data['position']== 3]\n",
+    "print(type(executives))\n",
+    "executives['male'].value_counts()"
    ]
   },
   {
@@ -259,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
